# duGL

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
assets/shaders/: basic.frag  basic.vert  basic_color.frag  basic_color.vert  basic_texture.frag  basic_texture.vert  outline.frag  outline.vert  skybox.vert
include/dugl/: app.h  camera.h  common.h  entity.h  flight_controller.h  game.h  keyboard.h  keyboard_observer.h  mesh.h  model_builder.h  mouse.h  mouse_observer.h  outlined_entity.h  perspective_interface.h  renderable.h  shader.h  skybox.h  uniform_buffer.h  window_interface.h
include/dugl/async/: dispatcher.h
include/dugl/controllers/: flight_controller.h  keyboard.h  keyboard_observer.h  mouse.h  mouse_observer.h
include/dugl/env/: env.h  simple_env.h
include/dugl/interfaces/: perspective_interface.h  player_interface.h  window_interface.h
include/dugl/modelling/: entity.h  mesh.h  model_builder.h  outlined_entity.h  renderable.h  skybox.h
include/dugl/shading/: lighting.h  shader.h  ubo_templates.h  uniform_buffer.h
include/dugl/utils/: common.h  glfw_include.h  imgui_adapter.h
include/dugl/view/: camera.h
scripts/: GLAD.cmake  GLFW.cmake  GLM.cmake  JoltPhysics.cmake  assets.cmake  assimp.cmake  config.cmake  imgui.cmake  stb.cmake
shaders/: basic.vert
src/: CMakeLists.txt  app.cpp  app.h  app_state.h  common.h  game.cpp  game.h  main.cpp
src/async/: CMakeLists.txt  dispatcher.cpp
src/controllers/: CMakeLists.txt  flight_controller.cpp  flight_controller.h  keyboard.cpp  keyboard.h  keyboard_controllable.h  mouse.cpp  mouse.h
src/controllers/interfaces/: keyboard_controllable.h  mouse_controllable.h
src/env/: CMakeLists.txt  env.cpp  simple_env.cpp
src/geometry/: CMakeLists.txt  entity.cpp  entity.h  renderable.cpp  renderable.h  vertex_manager.cpp  vertex_manager.h
src/geometry/factory/: CMakeLists.txt  cube_builder.cpp  cube_builder.h  ground_builder.cpp  ground_builder.h  renderable_factory.cpp  renderable_factory.h  vertex_builder.cpp  vertex_builder.h  vertex_factory.h
src/gui/: utils.h
src/interfaces/: perspective_interface.h  player_interface.h
src/model/: CMakeLists.txt  entity.cpp  entity.h  mesh.cpp  mesh.h  renderable.cpp  renderable.h  renderable_builder.cpp  renderable_builder.h  skybox.cpp  skybox.h
src/modelling/: CMakeLists.txt  skybox.cpp
src/modelling/entity/: CMakeLists.txt  entity.cpp  entity.h  outlined_entity.cpp  outlined_entity.h
src/modelling/renderable/: CMakeLists.txt  mesh.cpp  mesh.h  model_builder.cpp  model_builder.h  renderable.cpp  renderable.h
src/pipeline/: CMakeLists.txt  shader.cpp  shader.h
src/scene/: CMakeLists.txt  entity.cpp  entity.h  render_collection.cpp  render_collection.h  renderable.cpp  renderable.h  vertex_attribute.h  vertex_factory.cpp  vertex_factory.h  vertex_manager.cpp  vertex_manager.h  vmanager_interface.h
src/shading/: CMakeLists.txt  lighting.h  shader.cpp  shader.h  ubo_templates.h  uniform_buffer.cpp
src/utils/: CMakeLists.txt  init_utils.h  stb_image.cpp
src/view/: CMakeLists.txt  camera.cpp  camera.h
